@@ -98,8 +98,9 @@ class AssetTagHelperTest < Test::Unit::TestCase
   }
 
   ImagePathToTag = {
-    %(image_path("xml.png")) => %(/images/xml.png),
-    %(image_path("dir/xml.png")) => %(/images/dir/xml.png),
+    %(image_path("xml"))          => %(/images/xml),
+    %(image_path("xml.png"))      => %(/images/xml.png),
+    %(image_path("dir/xml.png"))  => %(/images/dir/xml.png),
     %(image_path("/dir/xml.png")) => %(/dir/xml.png)    
   }
 
@@ -112,10 +113,6 @@ class AssetTagHelperTest < Test::Unit::TestCase
     %(image_tag("error.png", "size" => "45 x 70")) => %(<img alt="Error" src="/images/error.png" />),
     %(image_tag("error.png", "size" => "x")) => %(<img alt="Error" src="/images/error.png" />),
     %(image_tag("http://www.rubyonrails.com/images/rails.png")) => %(<img alt="Rails" src="http://www.rubyonrails.com/images/rails.png" />)
-  }
-
-  DeprecatedImagePathToTag = {
-    %(image_path("xml")) => %(/images/xml.png)
   }
 
 
@@ -160,12 +157,6 @@ class AssetTagHelperTest < Test::Unit::TestCase
     ImageLinkToTag.each { |method, tag| assert_dom_equal(tag, eval(method)) }
   end
   
-  def test_should_deprecate_image_filename_with_no_extension
-    DeprecatedImagePathToTag.each do |method, tag| 
-      assert_deprecated("image_path") { assert_dom_equal(tag, eval(method)) }
-    end
-  end
-
   def test_timebased_asset_id
     expected_time = File.stat(File.expand_path(File.dirname(__FILE__) + "/../fixtures/public/images/rails.png")).mtime.to_i.to_s
     assert_equal %(<img alt="Rails" src="/images/rails.png?#{expected_time}" />), image_tag("rails.png")
